<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="mobile">Mobile</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_has_account">Already Has Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height In cm</string>
    <string name="weight">Weight In Kg</string>
    <string name="gender">Gender</string>
    <string name="calculate">Calculate</string>
    <string name="hi">Hi</string>
    <string name="exc">!</string>
    <string name="your_bmi">Your BMI = </string>
    <string name="you_are_in_the">You are in the</string>
    <string name="category">category.</string>
    <string name="log_out">Log Out</string>
    <string name="result">Result</string>
    <string name="Email">Email</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="calculator">Calculator</string>
</resources>